--- a/login.html
+++ b/login.html
@@ -6,8 +6,6 @@
  <title>Document</title>
 </head>
 <body>
- <h1>This is my app.. And it is very good</h1>
-login form
- <script src="./app.js"></script>
+ Login
 </body>
 </html>
